DPNG-1439: Fix unnecessary internal scrollbar in Firefox.

--- a/app/ui/app/styles/_vars.scss
+++ b/app/ui/app/styles/_vars.scss
@@ -28,3 +28,5 @@ $menu-width: 220px;
 $menu-collapsed-width: 70px;
 
 $header-height: 55px;
+
+$footer-border-thickness: 1px;
