--- a/app/ui/app/styles/themes/intel/main.scss
+++ b/app/ui/app/styles/themes/intel/main.scss
@@ -24,7 +24,7 @@ body {
 }
 
 .wrapper > footer {
-  border-top: 1px solid $footer-border-color;
+  border-top: $footer-border-thickness solid $footer-border-color;
 }
 
 a, a:active, a:hover {
